# spiral

./: .coverage  .env.example  .gitignore  .gitleaks.toml  .gitmodules  .pip-audit.toml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  _patch_parallel_rt.py  bash.exe.stackdump  cliff.toml  env_schema.json  main.py  prd.json  prd.json.bak  prd.schema.json  progress.txt  pyproject.toml  recommendations.md  results.tsv  retry-counts.json  setup.sh  spiral.config.sh  spiral.sh  spiral_events.jsonl
.github/: CODEOWNERS  SECURITY.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  spiral.yml
.hypothesis/constants/: 0c260712ec7ddb32  55dcc2a24cd8b7d3  5e049d8e16c1079c  7ef9d035f7f26d43  84df9f27538df597
.hypothesis/tmp/: tmp01kw3n3s  tmp07gnr37s  tmp09zqhg3y  tmp0_o_qnyv  tmp0c4a4iv5  tmp0cua3501  tmp0d_6qa3f  tmp0eb9n4pu  tmp0mxm648y  tmp0otx_lbr  tmp0rbyrlk1  tmp0te2yeol  tmp11wqkk0t  tmp13ka9jes  tmp13olp4xi  tmp17k68yjm  tmp17yy2ypt  tmp1alwlcge  tmp1b08xzp_  tmp1dw48t6r  tmp1e47mg42  tmp1kou6z_k  tmp1mbkzu8i  tmp1p8isr68  tmp1u0a_su7  tmp1uzbi204  tmp1ys0u800  tmp1zcus1zb  tmp20o24moi  tmp241x2smy  tmp29nqc01v  tmp2drxjgwe  tmp2ezymh3_  tmp2hb02588  tmp2o52c16z  tmp2oi70msp  tmp2pmmx8da  tmp2q37h2jz  tmp2xi84cwc  tmp34aze7rh  (+359 more)
.specify/memory/: constitution.md
docs/: ARCHITECTURE.md  WORKFLOW.md  dependency-graph.md  phase-0-clarify.md
lib/: ai_suggest.py  archive_prd.py  auto_release.py  benchmark_judge.py  calibration_tracker.py  cascade_skip.py  check_dag.py  check_done.py  check_prd_encoding.py  check_shell_injection.sh  circuit_breaker.sh  command_allowlist.sh  compact_prd.py  conflict_preflight.py  constants.py  context_injection.sh  cost_check.py  cost_project.py  crash_capture.sh  decompose_story.py  dependency_graph.py  detect_stack.py  domain_simulation_prompt.md  drift_check.py  flaky_tests.sh  generate_adr.py  generate_test_stories.py  import_csv.py  import_github.py  import_jira.py  infer_dependencies.py  injection_detector.py  llm_guard_scanner.py  llm_models.py  llm_router.py  memory-pressure-check.sh  memory-watchdog.ps1  memory-watchdog.sh  merge_results_tsv.py  merge_stories.py  (+46 more)
lib/impl/: commit_revert.sh  decompose.sh  retry.sh
lib/spiral-core/: BENCHMARK.md  Cargo.toml
lib/spiral-core/src/: check_done.rs  main.rs  merge.rs  merge_workers.rs  partition.rs  prd.rs  synthesize.rs  validate.rs
lib/spiral-core/tests/: integration_tests.rs
ralph/: CLAUDE.md  ralph-config.sh  ralph.sh  stream-formatter.mjs
specs/: README.md  SpiralPhases.cfg  SpiralPhases.tla  SpiralWorkers.cfg  SpiralWorkers.tla
spiral-ui/: bash.exe.stackdump  index.html  package-lock.json  package.json  vite.config.ts
spiral.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
templates/: prd.example.json  research_prompt.example.md  spiral.config.example.sh
tests/: _debug_wt.py  artifact_compression.bats  auto_decompose_threshold.bats  auto_stash.bats  circuit_breaker.bats  command_allowlist.bats  conftest.py  constitution_cache_invalidate.bats  context_injection.bats  conventional_commit.bats  diagnosis_block.bats  diff_size_guard.bats  dirty_worktree_reset.bats  duplicate_story_ids.bats  env_validation.bats  exit_codes.bats  flaky_tests.bats  gemini_skip_small.bats  git_author.bats  git_diff_fast_path.bats  local_fallback_policy.bats  model_fallback.bats  observation_masking.bats  overload_detection.bats  phase_parallel_rt.bats  phase_s_story_validate.bats  phase_v_parallel.bats  phase_v_skip.bats  policy_check.bats  prd_schema_validation.bats  prd_stream.bats  prompt_cache.bats  sast_gate.bats  security_scan.bats  spiral_events.bats  spiral_phases.bats  stale_lock_cleanup.bats  story_count_health.bats  subprocess_injection.bats  test_auto_release.py  (+66 more)
(+31 files in other folders)
