[project]
name = "spiral"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jsonschema>=4.23.0",
    "questionary>=2.0.1",
]

[project.scripts]
spiral = "main:main"

[tool.setuptools]
py-modules = ["main"]

[dependency-groups]
dev = [
    "hypothesis>=6.151.9",
    "pytest>=9.0.2",
]
