[project]
name = "spiral"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jsonschema>=4.23.0",
    "questionary>=2.0.1",
    "sentence-transformers>=3.0.1",
    "scikit-learn>=1.5.1",
    "rapidfuzz>=3.14.3",
    "opentelemetry-sdk>=1.30.0",
    "opentelemetry-exporter-otlp-proto-http>=1.30.0",
    "pydantic>=2.0",
]

[project.scripts]
spiral = "main:main"

[tool.setuptools]
py-modules = ["main"]

[dependency-groups]
dev = [
    "coverage[toml]>=7.13.4",
    "hypothesis>=6.151.9",
    "mypy==1.11.2",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.coverage.run]
source = ["lib"]

[tool.coverage.report]
show_missing = true
fail_under = 48

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true

# Gradual adoption: existing lib files are opted in incrementally.
# Files listed here relax strict flags until they are fully annotated.
# To graduate a module: remove it from this list and fix the remaining errors.
[[tool.mypy.overrides]]
module = [
    "check_dag",
    "llm_models",
    "cost_check",
    "decompose_story",
    "merge_results_tsv",
    "merge_stories",
    "merge_worker_results",
    "migrate_prd",
    "partition_prd",
    "populate_hints",
    "prd_lock",
    "prd_schema",
    "recommend_workers",
    "research_cache",
    "route_stories",
    "setup",
    "slice_prd",
    "spiral_dashboard",
    "spiral_report",
    "state_machine",
    "story_review_report",
]
disallow_any_generics = false
disallow_untyped_defs = false
disallow_untyped_calls = false
warn_return_any = false
