[package]
name = "spiral-core"
version = "0.1.0"
edition = "2021"
description = "SPIRAL hot-path utilities — replaces Python startup overhead"

[[bin]]
name = "spiral-core"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
clap = { version = "4", features = ["derive"] }
regex = "1"
